--- a/20210319/color.css
+++ b/20210319/color.css
@@ -1,7 +1,16 @@
 body {
-    background-color:rgb(0,0,0);
+    
 }
+h1 {
+    border: 1px solid gray;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 300%;
+    margin-top: 50px;
+    padding: 15px;
+}
+
 p {
     border: 2px solid tomato;
     color: turquoise;
+    padding: 10px;
 }
